Removing filter buttons from mural

--- a/mural/templates/mural/list.html
+++ b/mural/templates/mural/list.html
@@ -36,8 +36,6 @@
                             <input name="mine" type="checkbox" {{ mines }}> {% trans 'Only my posts' %}
                         </label>
                     </div>
-                    <button type="submit" class="btn btn-success btn-raised">{% trans 'Filter' %}</button>
-                    <button type="button" class="btn btn-default btn-raised clear_filter">{% trans 'Clean Filters' %}</button>
                 </form>
             </div>
         </div>
@@ -84,8 +82,6 @@
                         <input name="mine" type="checkbox" {{ mines }}> {% trans 'Only my posts' %}
                     </label>
                 </div>
-                <button type="submit" class="btn btn-success btn-raised btn-block">{% trans 'Filter' %}</button>
-                <button type="button" class="btn btn-default btn-raised btn-block clear_filter">{% trans 'Clean Filters' %}</button>
             </form>
     	</div>
     </div>
@@ -100,4 +96,10 @@
     <script type="text/javascript" src="{% static 'js/chat.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/mural.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/mural_general.js' %}"></script>
+{% endblock %}
+
+{% block addtional_scripts %}
+    <script type="text/javascript">
+        sessionSecurity.confirmFormDiscard = undefined;
+    </script>
 {% endblock %}
