--- a/mural/templates/mural/list_subject.html
+++ b/mural/templates/mural/list_subject.html
@@ -84,8 +84,6 @@
                                                         <input name="mine" type="checkbox"> {% trans 'Only my posts' %}
                                                     </label>
                                                 </div>
-                                                <button type="submit" class="btn btn-success btn-raised">{% trans 'Filter' %}</button>
-                                                <button type="button" class="btn btn-default btn-raised clear_filter">{% trans 'Clean Filters' %}</button>
                                             </form>
                                         </div>
                                     </div>
@@ -135,8 +133,6 @@
                                                     <input name="mine" type="checkbox"> {% trans 'Only my posts' %}
                                                 </label>
                                             </div>
-                                            <button type="submit" class="btn btn-success btn-raised btn-block">{% trans 'Filter' %}</button>
-                                            <button type="button" class="clear_filter btn btn-default btn-raised btn-block">{% trans 'Clean Filters' %}</button>
                                         </form>
                                     </div>
                                 </div>
@@ -164,4 +160,10 @@
     <script type="text/javascript" src="{% static 'js/mural.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/mural_ungeneral.js' %}"></script>
     <script type="text/javascript" src="{% static 'subjects/js/modal_subject.js' %}"></script>
+{% endblock %}
+
+{% block addtional_scripts %}
+    <script type="text/javascript">
+        sessionSecurity.confirmFormDiscard = undefined;
+    </script>
 {% endblock %}
