Adjusting news banner title in desktop version

--- a/amadeus/static/css/themes/black.sass
+++ b/amadeus/static/css/themes/black.sass
@@ -116,6 +116,8 @@ body .container-fluid .well-inverse
 .login_subcommands a, .login_subcommands a:hover
     color: $secondary-title
 
+.carousel-caption 
+    background: $primary-white
 
 /* === Forms === */
 
