--- a/amadeus/static/css/themes/black.css
+++ b/amadeus/static/css/themes/black.css
@@ -84,6 +84,9 @@ body .container-fluid .well-inverse {
 .login_subcommands a, .login_subcommands a:hover {
   color: #212121; }
 
+.carousel-caption {
+  background: #F5F5F5; }
+
 /* === Forms === */
 .form-group.is-focused label,
 .form-group.is-focused label.control-label {
