--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -115,6 +115,8 @@ body .container-fluid .well-inverse
 .login_subcommands a, .login_subcommands a:hover
     color: $secondary-title
 
+.carousel-caption 
+    background: $primary-white
 
 /* === Modal === */
 
