Adjusting subject access button alignment

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -236,6 +236,10 @@
 	    font-family: Roboto;
 	    font-weight: normal;
 	}
+
+	.subject_access_btn {
+		text-align: center;
+	}
 }
 
 @media(min-width: 768px) {
