Adjusting chat/participants user image

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -240,6 +240,10 @@
 	.subject_access_btn {
 		text-align: center;
 	}
+
+	.participant .user-img img {
+		height: auto;
+	}
 }
 
 @media(min-width: 768px) {
