--- a/amadeus/static/css/themes/black.css
+++ b/amadeus/static/css/themes/black.css
@@ -639,6 +639,9 @@ a.add-row {
 .chat-panel .chat-collapse {
   background: #EEE; }
 
+.fa-search-custom{
+  color: #424242;
+}
 /* === End Chat === */
 @media(max-width: 768px) {
   .navbar .navbar-nav .dropdown .dropdown-menu li > a {
