--- a/amadeus/static/css/themes/contrast.css
+++ b/amadeus/static/css/themes/contrast.css
@@ -873,6 +873,9 @@ a.add-row {
   color: #FFFFFF;
   opacity: 1; }
 
+.fa-search-custom{
+  color: #424242;;
+}
 /* === End Chat === */
 @media(max-width: 768px) {
   .navbar .navbar-nav .dropdown .dropdown-menu li > a {
