--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -591,6 +591,11 @@ a.add-row {
 .chat-panel .chat-collapse {
   background: #EEE; }
 
+
+.fa-search-custom{
+  color: #009C8A;
+}
+
 /* === End Chat === */
 @media(max-width: 768px) {
   .navbar .navbar-nav .dropdown .dropdown-menu li > a {
