--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -233,11 +233,11 @@
                     <form id="SearchForm" action="{% url 'subjects:search' %}" method="get" accept-charset="utf-8">
                         <div class="input-group">
                             <div class="form-group is-empty" >
-                                <input type="text" class="form-control top-search" placeholder="{% trans 'Search for subjects and resources' %}" name="search" style="color:#009C8A;">
+                                <input type="text" class="form-control top-search fa-search-custom" placeholder="{% trans 'Search for subjects and resources' %}" name="search">
                             </div>
                             <span class="input-group-btn input-group-sm">
                                 <button type="submit" class="btn btn-primary" id="btn-search">
-                                    <i class="fa fa-search" aria-hidden="true" style="font-size:20px; color: #009C8A;"></i>
+                                    <i class="fa fa-search fa-search-custom" aria-hidden="true" style="font-size:20px;"></i>
                                 </button>
                             </span>
                         </div>
