--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -58,7 +58,7 @@
 						{% elif field.auto_id == 'id_height' %}
 								<input class="form-control" id="id_height" name="height" type="hidden">
 						{% else %}
-								<div class="col-lg-12 col-md-12 col-sm-12">
+								<div class="form-group col-lg-12 col-md-12 col-sm-12">
 									<div class="form-group form-group-md">
 										<div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
 											{% if field.auto_id == 'id_image' %}
