--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -73,11 +73,12 @@
                 <div class="col-xs-6 col-md-3">
                     <p><b>{% trans "End" %}:</b> {{subject.end_date}}</p>
                 </div>
-            
-            {% if subject.description_brief %}
-                <p>{{subject.description_brief|safe}}</p>
-            {% endif %}
-
+                
+                <div class="col-sm-12 col-xs-12">
+                    {% if subject.description_brief %}
+                        <p>{{subject.description_brief|safe}}</p>
+                    {% endif %}
+                </div>
             {% if show_buttons %}
 
                 {% if has_subject_view_permissions %}
