Responsive badge in intermediary size

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -392,11 +392,6 @@
 		font-size: 32px !important;
 	}
 
-	li.item .notify_badge {
-	    top: 0px;
-	    right: 30px;
-	}
-
 }
 @media(max-width:610px){
 	.outside-title{
@@ -425,5 +420,18 @@
 @media(min-width: 500px) {
 	.dropdown-menu{
 		margin-left: 130px;
+	}
+
+	li.item .notify_badge {
+	    top: 0px;
+	    right: 30px;
+	}
+}
+
+@media(min-width: 1000px){
+
+	li.item .notify_badge {
+	    top: 0px;
+	    right: 0px;
 	}
 }
