--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -241,6 +241,27 @@ body .container-fluid .well-inverse
 /* === End Topbar === */
 
 
+/* === Mobile Menu === */
+.navbar-menu-btn 
+    color: $secondary-white
+
+.mobile_menu_navbar
+    background: #EDEDEE
+    color: #000000
+
+input#mobile_menu_btn:checked + .navbar-menu-btn 
+    color: #000
+
+.mobile_menu_navbar .navbar-nav>.open>a, 
+.mobile_menu_navbar .navbar-nav>.open>a:focus, 
+.mobile_menu_navbar .navbar-nav>.open>a:hover,
+.mobile_menu_navbar .navbar-nav>.open>a:active,
+.mobile_menu_navbar .navbar-nav>li>a:focus, 
+.mobile_menu_navbar .navbar-nav>li>a:hover
+    color: $secondary-white
+/* === End Mobile Menu === */
+
+
 /* === Sidebar === */
 
 #sidebar-menu .item 
