--- a/amadeus/static/css/themes/red.css
+++ b/amadeus/static/css/themes/red.css
@@ -241,6 +241,26 @@ body .container-fluid .well-inverse {
   background: #F5F5F5; }
 
 /* === End Topbar === */
+/* === Mobile Menu === */
+.navbar-menu-btn {
+  color: #FFFFFF; }
+
+.mobile_menu_navbar {
+  background: #EDEDEE;
+  color: #000000; }
+
+input#mobile_menu_btn:checked + .navbar-menu-btn {
+  color: #000; }
+
+.mobile_menu_navbar .navbar-nav > .open > a,
+.mobile_menu_navbar .navbar-nav > .open > a:focus,
+.mobile_menu_navbar .navbar-nav > .open > a:hover,
+.mobile_menu_navbar .navbar-nav > .open > a:active,
+.mobile_menu_navbar .navbar-nav > li > a:focus,
+.mobile_menu_navbar .navbar-nav > li > a:hover {
+  color: #FFFFFF; }
+
+/* === End Mobile Menu === */
 /* === Sidebar === */
 #sidebar-menu .item {
   background-color: #D32F2F;
@@ -639,16 +659,15 @@ a.add-row {
 .chat-panel .chat-collapse {
   background: #EEE; }
 
-.fa-search-custom{
-  color: #D32F2F;
-}
-
 /* === End Chat === */
 @media(max-width: 768px) {
   .navbar .navbar-nav .dropdown .dropdown-menu li > a {
     color: #333333 !important; }
 
   .navbar .navbar-nav .dropdown .dropdown-menu li > a:hover {
-    color: #D32F2F !important; } }
+    color: #D32F2F !important; }
+
+  .mobile_menu_navbar .navbar-nav .dropdown .dropdown-menu li > a:hover {
+    color: #FFFFFF !important; } }
 
 /*# sourceMappingURL=red.css.map */
