--- a/mural/templates/mural/resource_view.html
+++ b/mural/templates/mural/resource_view.html
@@ -76,8 +76,6 @@
 			                        <input name="mine" type="checkbox" {{ mines }}> {% trans 'Only my posts' %}
 			                    </label>
 			                </div>
-			                <button type="submit" class="btn btn-success btn-raised btn-block">{% trans 'Filter' %}</button>
-			                <button type="button" id="clear_filter" class="btn btn-default btn-raised btn-block clear_filter">{% trans 'Clean Filters' %}</button>
 			            </form>
 			    	</div>
 			    </div>
@@ -88,4 +86,10 @@
   
     <script type="text/javascript" src="{% static 'js/mural.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/mural_general.js' %}"></script>
+{% endblock %}
+
+{% block addtional_scripts %}
+    <script type="text/javascript">
+        sessionSecurity.confirmFormDiscard = undefined;
+    </script>
 {% endblock %}
