--- a/amadeus/static/css/themes/contrast.sass
+++ b/amadeus/static/css/themes/contrast.sass
@@ -412,6 +412,16 @@ fieldset[disabled][disabled] .input-group-btn .btn
 #system_menu 
     background: $primary-color
 
+/* --- Minor Screens --- */
+.search-responsive-collapse,
+.search-responsive-collapse .search
+    background: $primary-color
+
+.search-responsive-collapse #btn-search,
+.search-responsive-collapse .top-search
+    color: $secondary-white
+/* --- End Minor Screens --- */
+
 /* === End Topbar === */
 
 
