--- a/amadeus/static/css/themes/red.css
+++ b/amadeus/static/css/themes/red.css
@@ -240,6 +240,16 @@ body .container-fluid .well-inverse {
 #system_menu {
   background: #F5F5F5; }
 
+/* --- Minor Screens --- */
+.search-responsive-collapse,
+.search-responsive-collapse .search {
+  background: #F5F5F5; }
+
+.search-responsive-collapse #btn-search,
+.search-responsive-collapse .top-search {
+  color: #D32F2F; }
+
+/* --- End Minor Screens --- */
 /* === End Topbar === */
 /* === Mobile Menu === */
 .navbar-menu-btn {
