--- a/amadeus/static/css/themes/red.sass
+++ b/amadeus/static/css/themes/red.sass
@@ -288,6 +288,16 @@ body .container-fluid .well-inverse
 #system_menu 
     background: $primary-white
 
+/* --- Minor Screens --- */
+.search-responsive-collapse,
+.search-responsive-collapse .search
+    background: $primary-white
+
+.search-responsive-collapse #btn-search,
+.search-responsive-collapse .top-search
+    color: $primary-color
+/* --- End Minor Screens --- */
+
 /* === End Topbar === */
 
 
