--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -273,9 +273,11 @@
                     </a>
                 </div>
                 <div class="col-sm-4 col-xs-4">
-                    <a class="btn btn-primary navbar-toggle pull-right" id="btn-search" data-toggle="collapse" data-target=".search-responsive-collapse">
+                    <input id="mobile_search_btn" type="checkbox" />
+                    <label for="mobile_search_btn" class="btn btn-primary navbar-toggle pull-right mobile_search" id="btn-search" data-toggle="collapse" data-target=".search-responsive-collapse">
                         <i class="fa fa-search" aria-hidden="true"></i>
-                    </a>
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </label>
                 </div>
             </div>
 
