Aligning access subject button to left

--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -74,7 +74,7 @@
                     <p><b>{% trans "End" %}:</b> {{subject.end_date}}</p>
                 </div>
                 
-                <div class="col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     {% if subject.description_brief %}
                         <p>{{subject.description_brief|safe}}</p>
                     {% endif %}
@@ -82,15 +82,15 @@
             {% if show_buttons %}
 
                 {% if has_subject_view_permissions %}
-                    <div class="col-sm-12 col-xs-12 subject_access_btn" style="text-align:center">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 subject_access_btn">
                         <a href="{% url 'subjects:view' subject.slug %}" class="btn btn-success btn-raised"> {% trans "Access Subject" %}</a>
                     </div>
                 {% elif subject.subscribe_end|aftertoday %}
-                    <div class="col-sm-12 col-xs-12 subject_access_btn">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 subject_access_btn">
                         <a href="javascript:subscribe_subject.get('{% url 'subjects:subscribe' subject.slug %}?view=index','#subject-subscribe','#modal_subject')" class="subscribe-subject btn btn-primary btn-raised"> {% trans "Subscribe to Subject" %}</a>
                     </div>
                 {% else %}
-                    <div class="col-sm-12 col-xs-12">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <a  class="no-subscribe-btn btn btn-danger" disabled="disabled" style="white-space:normal"> {% trans "This subject doesn't allow new subscriptions" %}</a>
                     </div>
                 {% endif %}
