--- a/amadeus/static/css/themes/black.sass
+++ b/amadeus/static/css/themes/black.sass
@@ -214,7 +214,7 @@ body .container-fluid .well-inverse
 
 .language-selector .dropdown-menu > .active > a 
     background: $primary-menu-bg
-    color: $primary-color
+    color: $primary-white
 
 .language-selector .dropdown-menu > .active > a:hover 
     color: $primary-color
